--- a/_site.yml
+++ b/_site.yml
@@ -13,7 +13,7 @@ reflinks:
     google: 
         url: http://www.google.com
         title: Google
-    jandecaluwe:
+    jandecaluwe-mail:
         url: mailto:jan@jandecaluwe.com
         title: Jan Decaluwe
     bitbucket:
