--- a/_site.yml
+++ b/_site.yml
@@ -8,7 +8,7 @@ reflinks:
         url: http://old.myhdl.org 
         title: Old MyHDL site
     manual:
-        url: http://doc.myhdl.org/en/latest/
+        url: http://docs.myhdl.org/en/latest/
         title: Manual
     google: 
         url: http://www.google.com
