--- a/.github/workflows/makedocs.yml
+++ b/.github/workflows/makedocs.yml
@@ -9,5 +9,6 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
-    - run: |
-        make
+      - name: Running Make
+        run: |
+          make
