--- a/.github/workflows/makedocs.yml
+++ b/.github/workflows/makedocs.yml
@@ -9,6 +9,16 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python  "3.10"
+        uses: actions/setup-python@v3
+        with:
+          python-version:  "3.10"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip urubu
+          python -m pip install markdown==1.1.3
+          python -m pip install .
       - name: Running Make
         run: |
           make
