adding sequence to 'push' updated *.html to the _build directory

--- a/.github/workflows/makedocs.yml
+++ b/.github/workflows/makedocs.yml
@@ -21,3 +21,8 @@ jobs:
       - name: Running Make
         run: |
           make
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add _build/*.html
+          git commit -m "updating _build"
+          git push
