--- a/.github/workflows/makedocs.yml
+++ b/.github/workflows/makedocs.yml
@@ -23,6 +23,6 @@ jobs:
           make
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git add _build/*.html
+          git add _build/\*.html
           git commit -m "updating _build"
           git push
