--- a/.github/workflows/makedocs.yml
+++ b/.github/workflows/makedocs.yml
@@ -8,15 +8,21 @@ jobs:
   merge_job:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
+    
+    permissions:
+      contents: read
+      packages: write    
+    
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
       - name: Set up Python  3.7
         uses: actions/setup-python@v3
         with:
           python-version:  3.7
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip urubu
+          python -m pip install urubu
           python -m pip install markdown==2.6.11
       - name: Running Make
         run: |
