--- a/.github/workflows/makedocs.yml
+++ b/.github/workflows/makedocs.yml
@@ -1,4 +1,4 @@
-name: Make Docs AFter Merging Pull Request
+name: Make Docs After Merging Pull Request
 
 on:
   pull_request:
@@ -10,16 +10,16 @@ jobs:
     runs-on: ubuntu-latest
     
     permissions:
-      contents: read
+      contents: write
       packages: write    
     
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Set up Python  3.7
-        uses: actions/setup-python@v3
+        uses: actions/checkout@v4
+      - name: Set up Python  3.11
+        uses: actions/setup-python@v5
         with:
-          python-version:  3.7
+          python-version:  3.11
       - name: Install dependencies
         run: |
           python -m pip install urubu
@@ -29,6 +29,6 @@ jobs:
           make
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git add _build/\*.html
+          git add _build/\*.html _build/\*.json
           git commit -m "updating _build"
           git push
